# Linker

./: CMakeLists.txt
include/: coff_structures.h  elf_structures.h  linker.h  parser.h  platform_detector.h  platform_utils.h  relocation.h  symbol_table.h
src/: linker.cpp  main.cpp  parser.cpp  platform_detector.cpp  relocation.cpp  symbol_table.cpp
